# rest-wordle

./: Makefile  README.md  main.py  perf.py  pyproject.toml  test_result.py
rest_wordle/: __init__.py  main.py  utils.py
solver/: __init__.py  filter_solver.py  random_solver.py
