[tool.poetry]
name = "rest-wordle"
version = "0.1.0"
description = ""
authors = ["Olaf Gladis <olaf@gladis.org>"]
readme = "README.md"
packages = [{include = "rest_wordle"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-asyncio = "^0.19.0"
black = "^22.8.0"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
